# token-counter

./: .gitignore  README.md  pyproject.toml
src/token_counter/: __init__.py
tests/: test_cli.py
