[project]
name = "token-counter"
version = "1.0.0"
description = "Easily count the number of tokens from the commandline."
readme = "README.md"
authors = [
    { name = "kris927b", email = "kristian.smed.noergaard@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "tokenizers>=0.21.1",
    "typer>=0.15.2",
]

[project.scripts]
token-counter = "token_counter:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
